@@ -83,16 +83,12 @@ class InitializationController {
 			$staticInfoObj,
 			$errorMessage
 		);
-
 		$cmd = $this->controlData->getCmd();
 		$cmdKey = $this->controlData->getCmdKey();
 		$templateCode = $this->data->getTemplateCode();
 
 		if ($success) {
 			$displayClassName = 'JambageCom\\Agency\\View\\CreateView';
-			if (version_compare(TYPO3_version, '6.2.0', '<')) {
-				$displayClassName = 'tx_agency_display';
-			}
 
 			$displayObj = \t3lib_div::getUserObj($displayClassName);
 			$content = $this->control->doProcessing(
