@@ -5,13 +5,8 @@
 
 plugin.tx_agency = USER_INT
 
-[compatVersion = 6.1.0]
 plugin.tx_agency {
 	userFunc = JambageCom\Agency\Controller\RegisterPluginController->main
-}
-[global]
-
-plugin.tx_agency {
 	table.name = {$plugin.tx_agency.tableName}
 
 	templateFile = {$plugin.tx_agency.file.templateFile}
@@ -346,3 +341,4 @@ plugin.tx_agency {
 	_DEFAULT_PI_VARS {
 	}
 }
+
